added frontend file structure/templates/static

--- a/price_compare/look_app/templates/pages/docs.html
+++ b/price_compare/look_app/templates/pages/docs.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="stylesheet" href="/css/products.css">
-    <title>Products</title>
+    <link rel="stylesheet" href="/css/Docs.css">
+    <title>Documentation</title>
 </head>
 <body>
     <nav>
         <a href="/index.html">Home</a>
-        <a href="#">Products</a>
+        <a href="products.html">Products</a>
         <a href="html/About.html">About</a>
         <a href="#contact">contact</a>
-        <a href="Docs.html">Docs</a>
+        <a href="#">Docs</a>
     </nav>
 
     <a href="login.html">Sign-in</a>
@@ -24,7 +24,6 @@
     <div id="contact">
 
     </div>
-
 
 
     <script src="/js/main.js"></script>
