--- a/price_compare/look_app/templates/pages/about.html
+++ b/price_compare/look_app/templates/pages/about.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="stylesheet" href="/css/products.css">
-    <title>Products</title>
+    <link rel="stylesheet" href="/css/about.css">
+    <title>About</title>
 </head>
 <body>
     <nav>
         <a href="/index.html">Home</a>
-        <a href="#">Products</a>
-        <a href="html/About.html">About</a>
+        <a href="products.html">Products</a>
+        <a href="#">About</a>
         <a href="#contact">contact</a>
         <a href="Docs.html">Docs</a>
     </nav>
@@ -24,6 +24,7 @@
     <div id="contact">
 
     </div>
+
 
 
 
