--- a/price_compare/look_app/templates/pages/profile.html
+++ b/price_compare/look_app/templates/pages/profile.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="stylesheet" href="/css/products.css">
-    <title>Products</title>
+    <link rel="stylesheet" href="/css/profile.css">
+    <title>Profile</title>
 </head>
 <body>
     <nav>
         <a href="/index.html">Home</a>
-        <a href="#">Products</a>
+        <a href="products.html">Products</a>
         <a href="html/About.html">About</a>
         <a href="#contact">contact</a>
         <a href="Docs.html">Docs</a>
@@ -19,12 +19,12 @@
 
     <a href="login.html">Sign-in</a>
     <a href="signup.html">Sign-up</a>
-    <a href="profile.html">Profile</a>
+    <a href="#">Profile</a>
 
     <div id="contact">
 
     </div>
-
+    
 
 
     <script src="/js/main.js"></script>
