--- a/price_compare/look/templates/layouts/base.html
+++ b/price_compare/look/templates/layouts/base.html
@@ -10,16 +10,31 @@
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
           crossorigin="anonymous">
     {% block styles %}
-    
+
+
     {% endblock %}
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <a href={% url "home" %}>Home</a>
+        <a href={% url "products" %}>Products</a>
+        <a href={% url "about" %}>About</a>
+        <a href="#contact">contact</a>
+        <a href={% url "docs" %}>Docs</a>
+    </nav>
+
+    <a href={% url "login" %}>Sign-in</a>
+    <a href={% url "signup" %}>Sign-up</a>
+  
+
+
     <div class="container">
         {% block content %}
 
         
         {% endblock %}
     </div>
+    
 </body>
 </html>
