--- a/price_compare/look/templates/pages/signup.html
+++ b/price_compare/look/templates/pages/signup.html
@@ -1,8 +1,50 @@
-{% extends "../layouts/base.html" %}
-{% load static %}
-{% block content %}
-   <h1>SIGNUP</h1>
-{% endblock %}
-{% block styles %}
-    <link rel="stylesheet" href={% static "css/signup.css" %}>
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>fullscreen responsive login page</title>
+    <link rel="stylesheet" href="signin.css">
+</head>
+<body>
+    <section>
+        <div class="imgBx">
+            <img src="IMG-20221206-WA0018.jpg">
+        </div>
+        <div class="contentBx">
+            <div class="formBx">
+                <h2>Sign up</h2>
+                <form action="login.html">
+                    <div class="inputBx">
+                        <span>First name</span>
+                        <input type="text" name="" placeholder="Enter name" required>
+                    </div>
+                    <div class="inputBx">
+                        <span>Last name</span>
+                        <input type="text" name="" placeholder="Enter name" required>
+                    </div>
+                    <div class="inputBx">
+                        <span>Email</span>
+                        <input type="email" name="" placeholder="Enter Email" required>
+                    </div>
+                    <div class="inputBx">
+                        <span>Password</span>
+                        <input type="password" name="" placeholder="Enter password" required>
+                    </div>
+                    <div class="inputBx">
+                        <span>comfirm password</span>
+                        <input type="password" name="" placeholder="Enter password" required>
+                    </div>
+                    <div class="inputBx">
+                        <input type="submit" value="Sign up">
+                    </div>
+                    <div class="inputBx">
+                      <p>Already have an account? Login <a href="login.html">here</a></p>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+</body>
+</html>
