--- a/price_compare/look/templates/layouts/base.html
+++ b/price_compare/look/templates/layouts/base.html
@@ -9,6 +9,7 @@
           rel="stylesheet" 
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
           crossorigin="anonymous">
+    <link rel="icon" type="image/x-icon" href={% static "img/favicon.ico" %}>
     {% block styles %}
 
 
@@ -16,25 +17,14 @@
     <title>Document</title>
 </head>
 <body>
-    <nav>
-        <a href={% url "home" %}>Home</a>
-        <a href={% url "products" %}>Products</a>
-        <a href={% url "about" %}>About</a>
-        <a href="#contact">contact</a>
-        <a href={% url "docs" %}>Docs</a>
-    </nav>
 
-    <a href={% url "login" %}>Sign-in</a>
-    <a href={% url "signup" %}>Sign-up</a>
-  
-
-
-    <div class="container">
+    <!-- <div class="container"> -->
         {% block content %}
+
 
         
         {% endblock %}
-    </div>
-    
+    <!-- </div> -->
+
 </body>
 </html>
