--- a/price_compare/look/static/css/base.css
+++ b/price_compare/look/static/css/base.css
@@ -1,13 +1,6 @@
-*{
-    box-sizing: border-box;
-    padding: 0;
+/* *{
     margin: 0;
-}
- 
-body {
-    background-color: aquamarine;
-}
-
-h1 {
-    color: red;
-}
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'poppins', sans-serif;
+} */
