--- a/price_compare/look/static/css/login.css
+++ b/price_compare/look/static/css/login.css
@@ -4,17 +4,20 @@
     box-sizing: border-box;
     font-family: 'poppins', sans-serif;
 }
+
 section{
     position: relative;
     width: 100%;
     height: 100vh;
     display: flex;
 }
+
 section .imgBx{
     position: relative;
     width: 50%;
     height: 100%;
 }
+
 section .imgBx:before{
     content: '';
     position: absolute;
@@ -25,6 +28,7 @@ section .imgBx:before{
     background: linear-gradient(225deg,#e91e63,#03a9f4);
     
 }
+
 section .imgBx img{
     position: absolute;
     top: 0;
@@ -32,6 +36,7 @@ section .imgBx img{
     width: 100%;
     object-fit: cover;
 }
+
 section .contentBx{
     display: flex;
     justify-content: center;
@@ -39,10 +44,12 @@ section .contentBx{
     width: 50%;
     height: 100%;
 }
+
 section .contentBx .formBx{
     width: 70%;
 
 }
+
 section .contentBx .formBx h2{
     color: black;
     font-weight: 600;
@@ -53,9 +60,11 @@ section .contentBx .formBx h2{
     display: inline-block;
     letter-spacing: 1px;
 }
+
 section .contentBx .formBx .inputBx{
     margin-bottom: 30px;
 }
+
 section .contentBx .formBx .inputBx span{
     font-size: 16px;
     margin-bottom: 5px;
@@ -65,6 +74,7 @@ section .contentBx .formBx .inputBx span{
     font-size: 16px;
     letter-spacing: 1px;
 }
+
 section .contentBx .formBx .inputBx input{
     width: 100%;
     padding: 10px 20px;
@@ -76,6 +86,7 @@ section .contentBx .formBx .inputBx input{
     background: transparent;
     border-radius: 10px;
 }
+
 section .contentBx .formBx .inputBx input[type="submit"]{
     background: #03a9f4;
     outline: none;
@@ -83,19 +94,22 @@ section .contentBx .formBx .inputBx input[type="submit"]{
     font-weight: 500;
     cursor: pointer;
 }
+
 section .contentBx .formBx .inputBx input[type="submit"]:hover{
     background: #46c1e3;
 }
+
 section .contentBx .formBx .inputBx p{
     opacity: 50%;
 }
+
 section .contentBx .formBx .inputBx p a{
     color:  black;
     opacity: 200%;
 }
+
 @media(max-width: 786px){
-    section .imgBx
-    {
+    section .imgBx{
         position: absolute;
         top: 0;
         left: 0;
@@ -103,6 +117,7 @@ section .contentBx .formBx .inputBx p a{
         height: 100%;
 
     }
+
     section .contentBx{
         display: flex;
         justify-content: center;
@@ -112,6 +127,7 @@ section .contentBx .formBx .inputBx p a{
         z-index: 1;
         color: aliceblue;
     }
+
     section .contentBx .formBx{
         width: 70%;
     }
