--- a/price_compare/look/templates/pages/index.html
+++ b/price_compare/look/templates/pages/index.html
@@ -1,10 +1,28 @@
 {% extends "../layouts/base.html" %}
+
+
+
+
 {% load static %}
+
+
+
 {% block content %}
-   <h1>Landing page</h1>
+   <h1>Landing </h1>
    
-   
+   <h1>page</h1>
+   <h1>page</h1>
+   <h1>page</h1>
+
+
+
+
+
 {% endblock %}
+
+
+
+
 {% block styles %}
     <link rel="stylesheet" href={% static "css/index.css" %}>
 {% endblock %}
