--- a/price_compare/look/templates/pages/products.html
+++ b/price_compare/look/templates/pages/products.html
@@ -1,8 +1,49 @@
 {% extends "../layouts/base.html" %}
 {% load static %}
+
+
+
+
 {% block content %}
    <h1>PRODUCT</h1>
+
+   <div class="card" style="width: 18rem; margin:1rem">
+    <img src={% static "img/logo.jpg"%} class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">product</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem; margin:1rem">
+    <img src={% static "img/logo.jpg" %} class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src={% static "img/logo.jpg" %} class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+
+
+
+
+
 {% endblock %}
+
+
+
+
+
 {% block styles %}
     <link rel="stylesheet" href={% static "css/products.css" %}>
 {% endblock %}
