--- a/price_compare/look/templates/pages/signup.html
+++ b/price_compare/look/templates/pages/signup.html
@@ -1,50 +1,58 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>fullscreen responsive login page</title>
-    <link rel="stylesheet" href="signin.css">
-</head>
-<body>
-    <section>
-        <div class="imgBx">
-            <img src="IMG-20221206-WA0018.jpg">
+
+{% extends "../layouts/base.html" %}
+{% load static %}
+{% block content %}
+<section>
+    <div class="imgBx">
+        <img src="IMG-20221206-WA0018.jpg">
+    </div>
+    <div class="contentBx">
+        <div class="formBx">
+            <h2>Sign up</h2>
+            <form  method ="post" action="" >
+            {% csrf_token %}
+                <div class="inputBx">
+                    <!-- <span>First name</span>
+                    <input type="text" name="" placeholder="Enter name" required> -->
+                    {{form.username.label}}
+                    {{form.username}}
+                </div>
+                <div class="inputBx">
+                    {{form.firstname.label}}
+                    {{form.firstname}
+                    <!-- <span>Last name</span>
+                    <input type="text" name="" placeholder="Enter name" required> -->
+                </div>
+                <div class="inputBx">
+                    {{form.email.label}}
+                    {{form.email}}
+                    <!-- <span>Email</span>
+                    <input type="email" name="" placeholder="Enter Email" required> -->
+                </div>
+                <div class="inputBx">
+                    {{form.password1.label}}
+                    {{form.password1}}
+                    <!-- <span>Password</span>
+                    <input type="password" name="" placeholder="Enter password" required> -->
+                </div>
+                <div class="inputBx">
+                    {{form.password2.label}}
+                    {{form.password2}}
+                    <!-- <span>comfirm password</span>
+                    <input type="password" name="" placeholder="Enter password" required> -->
+                </div>
+                <div class="inputBx">
+                    <input type="submit" value="Sign up">
+                </div>
+                <div class="inputBx">
+                  <p>Already have an account? Login <a href={% url "login" %}>here</a></p>
+                </div>
+            </form>
         </div>
-        <div class="contentBx">
-            <div class="formBx">
-                <h2>Sign up</h2>
-                <form action="login.html">
-                    <div class="inputBx">
-                        <span>First name</span>
-                        <input type="text" name="" placeholder="Enter name" required>
-                    </div>
-                    <div class="inputBx">
-                        <span>Last name</span>
-                        <input type="text" name="" placeholder="Enter name" required>
-                    </div>
-                    <div class="inputBx">
-                        <span>Email</span>
-                        <input type="email" name="" placeholder="Enter Email" required>
-                    </div>
-                    <div class="inputBx">
-                        <span>Password</span>
-                        <input type="password" name="" placeholder="Enter password" required>
-                    </div>
-                    <div class="inputBx">
-                        <span>comfirm password</span>
-                        <input type="password" name="" placeholder="Enter password" required>
-                    </div>
-                    <div class="inputBx">
-                        <input type="submit" value="Sign up">
-                    </div>
-                    <div class="inputBx">
-                      <p>Already have an account? Login <a href="login.html">here</a></p>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </section>
-</body>
-</html>
+    </div>
+</section>
+{% endblock %}
+{% block styles %}
+    <link rel="stylesheet" href={% static "css/signup.css" %}>
+{% endblock %}
+
