--- a/price_compare/look/static/css/login.css
+++ b/price_compare/look/static/css/login.css
@@ -34,7 +34,8 @@ section .imgBx img{
     top: 0;
     left: 0;
     width: 100%;
-    object-fit: cover;
+    /* object-fit: cover; */
+    height: inherit;
 }
 
 section .contentBx{
