--- a/price_compare/look/templates/pages/about.html
+++ b/price_compare/look/templates/pages/about.html
@@ -1,7 +1,7 @@
 {% extends "../layouts/base.html" %}
 {% load static %}
 {% block content %}
-
+<a href={% url "logout" %}>Logout</a>
    <h1>ABOUT</h1>
    
 {% endblock %}
