--- a/price_compare/look/templates/pages/products.html
+++ b/price_compare/look/templates/pages/products.html
@@ -17,7 +17,7 @@
   </div>
 
   <div class="card" style="width: 18rem; margin:1rem">
-    <img src={% static "img/logo.jpg" %} class="card-img-top" alt="...">
+    <img src={% static "img/IMG-20221206-WA0018.jpg" %} class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Card title</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
