authentication module re-touch

--- a/price_compare/look/static/css/login.css
+++ b/price_compare/look/static/css/login.css
@@ -41,7 +41,7 @@ section .imgBx img{
 section .contentBx{
     display: flex;
     justify-content: center;
-    align-items: absolute;
+    align-items: center;
     width: 50%;
     height: 100%;
 }
@@ -105,8 +105,11 @@ section .contentBx .formBx .inputBx p{
 }
 
 section .contentBx .formBx .inputBx p a{
-    color:  black;
+    /* color:  black; */
+    color:  #0197f6;
     opacity: 200%;
+    font-weight: 700;
+    text-decoration: none;
 }
 
 @media(max-width: 786px){
@@ -131,5 +134,8 @@ section .contentBx .formBx .inputBx p a{
 
     section .contentBx .formBx{
         width: 70%;
+    }
+    .mobile-no{
+        display: none !important;
     }
 }
