--- a/price_compare/look/static/css/signup.css
+++ b/price_compare/look/static/css/signup.css
@@ -40,7 +40,7 @@ section .imgBx img{
 section .contentBx{
     display: flex;
     justify-content: center;
-    align-items: absolute;
+    align-items: center;
     width: 50%;
     height: 100%;
 }
@@ -93,10 +93,14 @@ section .contentBx .formBx .inputBx input[type="submit"]:hover{
 }
 section .contentBx .formBx .inputBx p{
     opacity: 50%;
+    text-align: center;
 }
 section .contentBx .formBx .inputBx p a{
     color:  black;
     opacity: 200%;
+    font-weight: 700;
+    text-decoration: none;
+    color:  #0197f6;
 }
 @media(max-width: 786px){
     section .imgBx{
@@ -121,4 +125,11 @@ section .contentBx .formBx .inputBx p a{
     section .contentBx .formBx{
         width: 70%;
     }
+    .mobile-no{
+        display: none !important;
+    }
+    /* section .contentBx .formBx .inputBx p a{
+        color:  #0197f6;
+       
+    } */
 }
