--- a/price_compare/look/templates/pages/profile.html
+++ b/price_compare/look/templates/pages/profile.html
@@ -1,7 +1,7 @@
 {% extends "../layouts/base.html" %}
 {% load static %}
 {% block content %}
-   <h1>PROFILE</h1>
+   <h1>PROFILE under Construction</h1>
 {% endblock %}
 {% block styles %}
     <link rel="stylesheet" href={% static "css/profile.css" %}>
