--- a/price_compare/look/templates/pages/index.html
+++ b/price_compare/look/templates/pages/index.html
@@ -8,16 +8,15 @@
 
 
 {% block content %}
-<a href={% url "logout" %}>Logout</a>
-   <h1>Landing </h1>
-   
-   <h1>page</h1>
-   <h1>page</h1>
-   <h1>page</h1>
+    {% if user.is_authenticated %}
+        Hi {{ user.username }}!
+        <a href={% url "logout" %}>Logout</a>
+    {% else %}
+    <p>You are not logged in</p>
+    <a href={% url 'login' %}>Log In</a>
+    {% endif %}
 
-
-
-
+   <h1>Landing Page under Construction</h1>
 
 {% endblock %}
 
