--- a/price_compare/look/templates/pages/login.html
+++ b/price_compare/look/templates/pages/login.html
@@ -7,7 +7,7 @@
         </div>
         <div class="contentBx">
             <div class="formBx">
-                <h2>Login</h2>
+                <h2 class="mobile-no">Login</h2>
                 <form method ="post" action="">
                 {% csrf_token %}
                     <div class="inputBx">
