--- a/price_compare/look/templates/pages/productDetail.html
+++ b/price_compare/look/templates/pages/productDetail.html
@@ -1,7 +1,7 @@
 {% extends "../layouts/base.html" %}
 {% load static %}
 {% block content %}
-   <h1>PRODUCTDETAIL</h1>
+   <h1>PRODUCT DETAIL under Construction</h1>
 
    
 {% endblock %}
