added password reset

--- a/price_compare/look/templates/pages/signup.html
+++ b/price_compare/look/templates/pages/signup.html
@@ -45,7 +45,7 @@
                         <input type="submit" value="Sign up">
                     </div>
                     <div class="inputBx">
-                    <p>Already have an account? Login <a href={% url "login" %}>here</a></p>
+                    <p>Already have an account? <a href={% url "login" %}>login</a></p>
                     </div>
                 </form>
             </div>
