--- a/price_compare/look/templates/pages/docs.html
+++ b/price_compare/look/templates/pages/docs.html
@@ -4,8 +4,9 @@
 
 
 {% block content %}
-<a href={% url "logout" %}>Logout</a>
-   <h1>docs</h1>
+<!-- <a href={% url "logout" %}>Logout</a> -->
+
+   <h1>docs under Construction</h1>
   
    
 {% endblock %}
